Fixed horizontal scroll buttons visibility

--- a/src/app/section/section.css
+++ b/src/app/section/section.css
@@ -24,14 +24,17 @@
   top: 50%;
   transform: translateY(-50%);
   z-index: 1;
-  background-color: rgba(255, 255, 255, 0.679);
-  color: #203443;
+  background-color: #20344392;
+  color: white;
   border: none;
-  font-size: 1rem;
+  font-size: 2rem;
   width: 40px;
-  height: 40px;
+  height: 100%;
   cursor: pointer;
-  border-radius: 20px;
+}
+
+.scroll-btn:hover {
+    background-color: #203443d4;
 }
 
 .scroll-btn.left {
@@ -41,3 +44,10 @@
 .scroll-btn.right {
   right: 0;
 }
+
+.scroll-container {
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+}
+
