--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 .section {
-  padding: 1rem 1rem;
+  padding: 1rem 0 1rem 1rem;
 }
 
 h1 {
